--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.main.banner-mode=CONSOLE
 spring.banner.location=classpath:banner.txt
 
-# JSP 설정
+# view resolver
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
@@ -12,3 +12,6 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/test?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=tchala
 
+# mybatis setting
+mybatis.type-aliases-package=org.kosta.myapp.model
+mybatis.configuration.map-underscore-to-camel-case=true
