--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -1,3 +1,17 @@
 server.port=8080
 spring.main.banner-mode=CONSOLE
 spring.banner.location=classpath:banner.txt
+
+# view resolver
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+# DataSource
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/test?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=tchala
+
+# mybatis setting
+mybatis.type-aliases-package=org.kosta.myapp.model
+mybatis.configuration.map-underscore-to-camel-case=true
