--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -13,5 +13,5 @@ spring.datasource.username=root
 spring.datasource.password=tchala
 
 # mybatis setting
-mybatis.type-aliases-package=org.kosta.myapp.model
+mybatis.type-aliases-package=com.jw.
 mybatis.configuration.map-underscore-to-camel-case=true
