--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -13,5 +13,6 @@ spring.datasource.username=root
 spring.datasource.password=tchala
 
 # mybatis setting
-mybatis.type-aliases-package=com.jw.
-mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.jw.user.model
+mybatis.mapper-locations=mapper/*.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
