--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,24 @@
 		    <version>3.8.1</version>
 		</dependency>
 		
+		<!-- jasper (JSP 구동 라이브러리) -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<!-- jstl 라이브러리 -->
+		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+		
+		<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-devtools</artifactId> 
+		</dependency>
+
 		<!-- MariaDB --> 
 		<dependency> 
 			<groupId>org.mariadb.jdbc</groupId> 
@@ -62,8 +80,8 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
-	</dependencies>
-	
+		</dependencies>
+		
 	<build>
 		<plugins>
 			<plugin>
