--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -6,6 +6,9 @@ spring.banner.location=classpath:banner.txt
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+#JSP수정시 서버 재시작없이 바로 적용될 수 있게 설정 
+server.servlet.jsp.init-parameters.development=true
+
 # DataSource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/test?autoReconnect=true
