--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,14 @@ mybatis.type-aliases-package=com.jw.user.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
+# update the schema with the given values.
+spring.jpa.hibernate.ddl-auto=create-drop
+# To beautify or pretty print the SQL
+spring.jpa.properties.hibernate.format_sql=true
+# show sql
+spring.jpa.properties.hibernate.show-sql=true
+# show parameter binding
+logging.level.org.hibernate.type.descriptor.sql=DEBUG
+
+# Logging Level
+logging.level.org.hibernate.SQL=DEBUG
