--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,9 +6,6 @@ spring.banner.location=classpath:banner.txt
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-#JSP수정시 서버 재시작없이 바로 적용될 수 있게 설정 
-server.servlet.jsp.init-parameters.development=true
-
 # DataSource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/test?autoReconnect=true
@@ -18,4 +15,15 @@ spring.datasource.password=tchala
 # mybatis setting
 mybatis.type-aliases-package=com.jw.user.model
 mybatis.mapper-locations=mapper/*.xml
-#mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# update the schema with the given values.
+spring.jpa.hibernate.ddl-auto=update
+# To beautify or pretty print the SQL
+spring.jpa.properties.hibernate.format_sql=true
+# show sql
+spring.jpa.properties.hibernate.show-sql=true
+# show parameter binding
+logging.level.org.hibernate.type.descriptor.sql=DEBUG
+
+logging.level.org.hibernate.SQL=DEBUG
