--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 		    <version>3.8.1</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
 		<!-- jasper (JSP 구동 라이브러리) -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -62,7 +68,7 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId> 
 			<version>2.2.0</version> 
 		</dependency>
-		
+        
 		<!-- jpa -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -71,11 +77,30 @@
 		
 		<!-- HikariCP -->
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-hikaricp</artifactId>
+			<version>5.4.10.Final</version>
+		</dependency>
+		
+	<!--  	<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
-			<version>3.4.5</version>
-		</dependency>
-
+			<version>4.0.3</version>
+		</dependency> -->
+		
+		<!-- JUnit4 사용하기 위해서 Vintage Engine 모듈을 제외 -->
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+		
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -94,7 +119,6 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 		</dependencies>
-		
 	<build>
 		<plugins>
 			<plugin>
