--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,24 +7,20 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # DataSource
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/test?autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=tchala
+spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/test?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=tchala
 
 # mybatis setting
 mybatis.type-aliases-package=com.jw.user.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# update the schema with the given values.
-spring.jpa.hibernate.ddl-auto=create-drop
-# To beautify or pretty print the SQL
-spring.jpa.properties.hibernate.format_sql=true
-# show sql
-spring.jpa.properties.hibernate.show-sql=true
-# show parameter binding
-logging.level.org.hibernate.type.descriptor.sql=DEBUG
+# root 로깅 레벨 설정
+logging.level.root=info
+# 패키지 단위로 로깅 레벨 설정 
+logging.level.com.api.board=info 
+logging.level.com.api.board.controller=debug
+	
 
-# Logging Level
-logging.level.org.hibernate.SQL=DEBUG
