--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 
 # DataSource
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/test?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/test?useUnicode=true&characterEncoding=utf-serverTimezone=UTC
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=tchala
 
