--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 
 # DataSource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/test?autoReconnect=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/test?useUnicode=true&characterEncoding=utf-serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=tchala
 
