--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,17 @@
             <version>2.9.2</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.6.1.Final</version>
+        </dependency>
+ 		
+ 		 <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
 		</dependencies>
 	<build>
 		<plugins>
