--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,10 +7,13 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # DataSource
-spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/test?useUnicode=true&characterEncoding=utf-serverTimezone=UTC
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=tchala
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # mybatis setting
 mybatis.type-aliases-package=com.jw.user.model
@@ -20,7 +23,5 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # root 로깅 레벨 설정
 logging.level.root=info
 # 패키지 단위로 로깅 레벨 설정 
-logging.level.com.api.board=info 
-logging.level.com.api.board.controller=debug
-	
-
+logging.level.com.jw.user=info
+logging.level.com.jw.user.web=debug
