--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -7,23 +7,21 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # DataSource
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/test?useUnicode=true&characterEncoding=utf-serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=tchala
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=tchala
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # mybatis setting
 mybatis.type-aliases-package=com.jw.user.model
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# update the schema with the given values.
-spring.jpa.hibernate.ddl-auto=update
-# To beautify or pretty print the SQL
-spring.jpa.properties.hibernate.format_sql=true
-# show sql
-spring.jpa.properties.hibernate.show-sql=true
-# show parameter binding
-logging.level.org.hibernate.type.descriptor.sql=DEBUG
-
-logging.level.org.hibernate.SQL=DEBUG
+# root 로깅 레벨 설정
+logging.level.root=info
+# 패키지 단위로 로깅 레벨 설정 
+logging.level.com.jw.user=info
+logging.level.com.jw.user.web=debug
