--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -11,9 +11,11 @@ spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=tchala
-spring.jpa.database = MYSQL
-spring.jpa.show-sql = true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.properties.hibernate.format_sql=true
 
 # mybatis setting
 mybatis.type-aliases-package=com.jw.user.model
