--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,14 @@
         </dependency>
         
 		<!-- jasper (JSP 구동 라이브러리) -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency> -->
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		
 		<!-- jstl 라이브러리 -->
