--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -2,9 +2,9 @@ server.port=8080
 spring.main.banner-mode=CONSOLE
 spring.banner.location=classpath:banner.txt
 
-# view resolver
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+## view resolver
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
 
 # DataSource
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -27,3 +27,10 @@ logging.level.root=info
 # 패키지 단위로 로깅 레벨 설정 
 logging.level.com.jw.user=info
 logging.level.com.jw.user.web=debug
+
+# thymeleaf 설정
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
