--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.error.whitelabel.enabled=false
 spring.main.banner-mode=CONSOLE
 spring.banner.location=classpath:banner.txt
 
@@ -34,3 +35,4 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
+
