--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,13 @@ spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=tchala
+#spring.datasource.dbcp2.test
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.connection-test-query="SELECT 1"
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true 
