--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,29 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        
+        <!-- Spring Security -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+		<!-- <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+		https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+		 -->
 	</dependencies>
 		
 	<build>
