01/20/22 user 등록 기능 완료

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,4 +37,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 
-spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.static-path-pattern=/static/**
