--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,22 @@
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		 -->
+		 
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.3.6</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap-datepicker</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>1.9.1</version>
+		</dependency>
 	</dependencies>
 		
 	<build>
