01/20/22 spring security setup

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,3 +38,7 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 
 spring.mvc.static-path-pattern=/static/**
+
+spring.security.user.name=tchalamet
+spring.security.user.password=dune1234
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
