--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.error.whitelabel.enabled=false
 spring.main.banner-mode=CONSOLE
 spring.banner.location=classpath:banner.txt
 
@@ -11,6 +12,13 @@ spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=tchala
+#spring.datasource.dbcp2.test
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.connection-test-query="SELECT 1"
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true 
@@ -28,3 +36,9 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
+
+spring.mvc.static-path-pattern=/static/**
+
+spring.security.user.name=tchalamet
+spring.security.user.password=dune1234
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
